added some more updates

--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SKAPEGOHT - "Leading with Love ☮️"</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SKAPEGOHT | Music, Blog, Tutorials and More!</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <center>
-    <h2>heading</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum, sed ipsam, quo quasi vitae ducimus iusto impedit corrupti nemo laboriosam voluptatibus nostrum eos fuga saepe. Asperiores labore architecto debitis fugit!</p>
-    </center>
+  <nav id="navbar">
+    <div class="hamburger-menu">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header class="parallax">
+    <div class="header-content">
+      <h1>Welcome to our Website</h1>
+    </div>
+  </header>
+
+  <section>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
+    </p>
+  </section>
 </body>
 </html>
