--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
 </head>
 <body>
   <nav id="navbar">
@@ -20,13 +21,20 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact</a></li>
-    </ul>
+      <li>
+        <a href="https://www.instagram.com/your_username/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+    </div>
   </nav>
 
   <header class="parallax">
     <div class="header-content">
-      <h1>Welcome to our Website</h1>
-    </div>
+      <h1>Welcome to the Community.</h1>
+      <button class="header-button" id="button1">About</button>
+      <button class="header-button" id="button2">Contact</button>
+    </div>    
   </header>
 
   <section>
