--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </nav>
 
   <header class="parallax">
+    <div class="header-container">
     <div class="header-content">
       <h1>Welcome to the Community.</h1>
       <button class="header-button" id="button1">About</button>
