--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
+  <!-- ... other head content ... -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav id="navbar">
+    <a href="#" class="logo">
+      <img src="img/skapegoht.png" alt="Logo" />
+    </a>
     <div class="hamburger-menu">
       <div class="bar"></div>
-      <div class="bar"></div>
+      <div class="bar"></div>      
       <div class="bar"></div>
     </div>
     <ul class="nav-links">
@@ -24,6 +31,7 @@
       <li>
         <a href="https://www.instagram.com/your_username/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
+          
         </a>
       </li>
     </div>
@@ -41,6 +49,9 @@
   <section>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
+      
     </p>
   </section>
 </body>
