added hover functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav id="navbar">
     <a href="#" class="logo">
-      <img src="img/skapegoht.png" alt="Logo" />
+      <img src="img/skapegoht.png" data-src="path/to/your/logo-hover.png" alt="Logo" />
     </a>
     <div class="hamburger-menu">
       <div class="bar"></div>
