more styling changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SKAPEGOHT | Music, Blog, Tutorials and More!</title>
+  <title>SKAPEGOHT | Music, Blog, Tutorials and More</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js" defer></script>
@@ -16,7 +16,8 @@
 <body>
   <nav id="navbar">
     <a href="#" class="logo">
-      <img src="img/skapegoht.png" data-src="path/to/your/logo-hover.png" alt="Logo" />
+      <img class="logo-normal" src="img/skapegoht_2023.png" alt="Logo" />
+      <img class="logo-hover" src="img/skapegoht_2023_hovered.png" alt="Logo Hover" />
     </a>
     <div class="hamburger-menu">
       <div class="bar"></div>
@@ -43,11 +44,13 @@
       <h1>Welcome to the Community.</h1>
       <button class="header-button" id="button1">About</button>
       <button class="header-button" id="button2">Contact</button>
+    </div>
+    <a href="#main-content" class="scroll-arrow">⮟</a>
     </div>    
   </header>
 
   <section>
-    <p>
+    <p id="main-content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.
