added more styling updates

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
   <!-- ... other head content ... -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <nav id="navbar">
@@ -29,13 +33,13 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact</a></li>
-      <li>
+      <li> 
         <a href="https://www.instagram.com/your_username/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
           
         </a>
       </li>
-    </div>
+    </ul>
   </nav>
 
   <header class="parallax">
@@ -51,9 +55,14 @@
 
   <section>
     <p id="main-content">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex in exercitationem minima, consequuntur consequatur cum quidem soluta quam libero ad, corrupti ipsa alias voluptatum incidunt unde tempore quo dolorem.      
+      <center><b>"Leading with Love"</b>
+    <br>Hello world! Welcome to an inclusive community that embraces <b>all.</b>
+    <br>We can make a positive change, and it starts with our music, art, and ambition.</center>
     </p>
   </section>
+  <div class="scroll-to-top">
+    <i class="fas fa-chevron-up"></i>
+  </div>
   <footer>
     <div class="footer-links">
       <a href="#">About</a>
@@ -62,11 +71,19 @@
       <a href="#">Contact</a>
     </div>
     <div class="social-media">
-      <a href="https://www.facebook.com" target="_blank" class="social-icon">Facebook</a>
-      <a href="https://www.tiktok.com" target="_blank" class="social-icon">TikTok</a>
-      <a href="https://www.youtube.com" target="_blank" class="social-icon">YouTube</a>
-      <a href="https://www.instagram.com" target="_blank" class="social-icon">Instagram</a>
-    </div>
+      <a href="https://www.youtube.com" target="_blank" class="social-icon">
+        <i class="fab fa-youtube"></i> YouTube
+      </a>
+      <a href="https://www.tiktok.com" target="_blank" class="social-icon">
+        <i class="fab fa-tiktok"></i> TikTok
+      </a>
+      <a href="https://www.instagram.com" target="_blank" class="social-icon">
+        <i class="fab fa-instagram"></i> Instagram
+      </a>
+      <a href="https://www.facebook.com" target="_blank" class="social-icon">
+        <i class="fab fa-facebook-f"></i> Facebook
+      </a>
+    </div>    
     <div class="copyright">Copyright &copy; Skapegoht 2023</div>
   </footer>
   
