--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       <button class="header-button" id="button1">About</button>
       <button class="header-button" id="button2">Contact</button>
     </div>
-    <a href="#main-content" class="scroll-arrow">⮟</a>
+    <a href="#main-content" class="scroll-arrow">&#x2193;</a>
     </div>    
   </header>
 
   <section>
     <p id="main-content">
-      <center><b>"Leading with Love"</b>
+      <center><b>"Leading with Love &#9774;"</b>
     <br>Hello world! Welcome to an inclusive community that embraces <b>all.</b>
     <br>We can make a positive change, and it starts with our music, art, and ambition.</center>
     </p>
