--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
-  <!-- ... other head content ... -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap" rel="stylesheet">
-  
 </head>
 <body>
   <nav id="navbar">
@@ -36,23 +34,20 @@
       <li> 
         <a href="https://www.instagram.com/your_username/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
-          
         </a>
       </li>
     </ul>
   </nav>
-
   <header class="parallax">
     <div class="header-container">
     <div class="header-content">
-      <h1>Welcome to the Community.</h1>
+      <h1 id="header">Welcome to the Community.</h1>
       <button class="header-button" id="button1">About</button>
       <button class="header-button" id="button2">Contact</button>
     </div>
     <a href="#main-content" class="scroll-arrow">&#x2193;</a>
     </div>    
   </header>
-
   <section>
     <p id="main-content">
       <center><b>"Leading with Love &#9774;"</b>
@@ -86,6 +81,5 @@
     </div>    
     <div class="copyright">Copyright &copy; Skapegoht 2023</div>
   </footer>
-  
 </body>
 </html>
