--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </div>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
+      <li><a href="#">Store</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Music</a></li>
+      <li><a href="#">Freebies</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Sign Up</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-      <li> 
-        <a href="https://www.instagram.com/your_username/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </li>
+    </div>
     </ul>
   </nav>
   <header class="parallax">
@@ -50,7 +50,7 @@
   </header>
   <section>
     <p id="main-content">
-      <center><b>"Leading with Love &#9774;"</b>
+      <center><b><i>Leading with Love</i> &#9774;</b>
     <br>Hello world! Welcome to an inclusive community that embraces <b>all.</b>
     <br>We can make a positive change, and it starts with our music, art, and ambition.</center>
     </p>
@@ -60,10 +60,10 @@
   </div>
   <footer>
     <div class="footer-links">
-      <a href="#">About</a>
       <a href="#">Store</a>
-      <a href="#">Music</a>
+      <a href="#">Sign Up</a>
       <a href="#">Contact</a>
+      <a href="#">About</a>
     </div>
     <div class="social-media">
       <a href="https://www.youtube.com" target="_blank" class="social-icon">
