added nav bar icons

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <div class="bar"></div>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Store</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Music</a></li>
-      <li><a href="#">Freebies</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Sign Up</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="#"><i class="fas fa-home"></i>&nbspHome</a></li>
+      <li><a href="#"><i class="fa-solid fa-bag-shopping"></i>&nbspStore</a></li>
+      <li><a href="#"><i class="fa-solid fa-book"></i>&nbspBlog</a></li>
+      <li><a href="#"><i class="fa-solid fa-music"></i>&nbspMusic</a></li>
+      <li><a href="#"><i class="fa-solid fa-cloud-arrow-down"></i>&nbspFreebies</a></li>
+      <li><a href="#"><i class="fa-solid fa-code"></i>&nbspProjects</a></li>
+      <li><a href="#"><i class="fa-solid fa-envelope"></i>&nbspSign Up</a></li>
+      <li><a href="#"><i class="fa-solid fa-address-card"></i>&nbspAbout</a></li>
     </div>
     </ul>
   </nav>
