--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <div class="footer-links">
-        <a href="store.php">Store</a>
+        <a href="store.html">Store</a>
         <a href="https://mailchi.mp/c0633f8de561/skapegoht">Sign Up</a>
-        <a href="contact.php">Contact</a>
-        <a href="about.php">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
     </div>
     <div class="social-media">
         <a href="https://www.youtube.com" target="_blank" class="social-icon">
