--- a/header.html
+++ b/header.html
@@ -23,7 +23,6 @@
   a {
     text-decoration: none;
   }
-
   /* Style for the buttons */
   .header-button-link {
     text-decoration: none;
@@ -35,7 +34,6 @@
     cursor: pointer;
     display: inline-block;
   }
-
   .header-button-link:hover {
     background-color: rgb(37, 130, 120) /* Change the hover background color to your desired color */
   }
@@ -53,14 +51,14 @@
       <div class="bar"></div>
     </div>
     <ul class="nav-links">
-      <li><a href="index.php"><i class="fas fa-home"></i>&nbspHome</a></li>
-      <li><a href="store.php"><i class="fa-solid fa-bag-shopping"></i>&nbspStore</a></li> 
-      <li><a href="blog.php"><i class="fa-solid fa-book"></i>&nbspBlog</a></li>
-      <li><a href="music.php"><i class="fa-solid fa-music"></i>&nbspMusic</a></li>
-      <li><a href="freebies.php"><i class="fa-solid fa-cloud-arrow-down"></i>&nbspFreebies</a></li>
-      <li><a href="projects.php"><i class="fa-solid fa-code"></i>&nbspProjects</a></li>
+      <li><a href="index.html"><i class="fas fa-home"></i>&nbspHome</a></li>
+      <li><a href="store.html"><i class="fa-solid fa-bag-shopping"></i>&nbspStore</a></li> 
+      <li><a href="blog.html"><i class="fa-solid fa-book"></i>&nbspBlog</a></li>
+      <li><a href="music.html"><i class="fa-solid fa-music"></i>&nbspMusic</a></li>
+      <li><a href="freebies.html"fa-solid fa-cloud-arrow-down"></i>&nbspFreebies</a></li>
+      <li><a href="projects.html"><i class="fa-solid fa-code"></i>&nbspProjects</a></li>
       <li><a href="https://mailchi.mp/c0633f8de561/skapegoht"><i class="fa-solid fa-envelope"></i>&nbspSign Up</a></li>
-      <li><a href="about.php"><i class="fa-solid fa-address-card"></i>&nbspAbout</a></li>
+      <li><a href="about.html"><i class="fa-solid fa-address-card"></i>&nbspAbout</a></li>
     </div>
     </ul>
   </nav>
