--- a/about.html
+++ b/about.html
@@ -1,4 +1,18 @@
-<?php include 'header.php'; ?>
+<!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SKAPEGOHT | Official Website - Welcome to the Community!</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js" defer></script>
+    <script type="module" src="main.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
+    <custom-font></custom-font>
+   </head>
+   <body>
+    <my-header></my-header>
   <main>
    <center> <section class="about-section">
       <h1>About SKAPEGOHT</h1>
@@ -10,4 +24,6 @@
       <p>Looking ahead, I am excited to expand my contributions to the music production community. I am in the process of developing a comprehensive mentoring program, designed to offer personalized guidance and support to aspiring producers. Additionally, I plan to provide technical troubleshooting services, leveraging my extensive knowledge to help others overcome the challenges they face in their production journey. Through these initiatives, I aim to foster a supportive and collaborative environment for music creators at all levels.</p>
    </center> </section>
   </main>
-  <?php include 'footer.php'; ?> 
+  <my-footer></my-footer>
+   </body>
+   </html>
