--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
-<?php include 'header.php'; ?>
-<header class="parallax">
-    <div class="header-container">
-      <div class="header-content">
-        <h1 id="header">Welcome to the Community.</h1>
-        <a href="about.html" class="header-button-link" id="button1">About</a>
-        <a href="contact.html" class="header-button-link" id="button2">Contact</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SKAPEGOHT | Official Website - Welcome to the Community!</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js" defer></script>
+    <script type="module" src="main.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"/>
+    <custom-font></custom-font>
+  </head>
+  <body>
+    <my-header></my-header>
+    <header class="parallax">
+      <div class="header-container">
+        <div class="header-content">
+          <h1 id="header">Welcome to the Community.</h1>
+          <a href="about.html" class="header-button-link" id="button1">About</a>
+          <a href="contact.html" class="header-button-link" id="button2"
+            >Contact</a>
+        </div>
+        <a href="#main-content" class="scroll-arrow">&#x2193;</a>
       </div>
-      <a href="#main-content" class="scroll-arrow">&#x2193;</a>
-    </div>    
-  </header>
-  <section>
-    <p id="main-content">
-      <center><b><i>Leading with Love</i> &#9774;</b>
-    <br>Hello world! Welcome to an inclusive community that embraces <b>all.</b>
-    <br>We can make a positive change, and it starts with our music, art, and ambition.</center>
-    </p>
-  </section>
-<?php include 'footer.php'; ?> 
+    </header>
+    <section>
+      <p id="main-content">
+        <center>
+          <b><i>Leading with Love</i> &#9774;</b> <br />Hello world! Welcome to
+          an inclusive community that embraces <b>all.</b> <br />We can make a
+          positive change, and it starts with our music, art, and ambition.
+        </center>
+      </p>
+    </section>
+    <my-footer></my-footer>
+  </body>
+</html>
