--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,18 @@
-<?php include 'header.php'; ?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SKAPEGOHT | Official Website - Welcome to the Community!</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js" defer></script>
+  <script type="module" src="main.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
+  <custom-font></custom-font>
+ </head>
+ <body>
+  <my-header></my-header>
   <main>
    <center> <section class="contact-section">
       <h1>CONTACT INFO!</h1>
@@ -17,4 +31,6 @@
       </p>
     </section></center>
   </main>
-  <?php include 'footer.php'; ?> 
+  <my-footer></my-footer>
+</body>
+</html>
