--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"/>
     <custom-font></custom-font>
+    <my-favicon></my-favicon>
   </head>
   <body>
     <my-header></my-header>
