--- a/freebies.html
+++ b/freebies.html
@@ -16,9 +16,9 @@
     <my-header></my-header>
 <main>
 
-<h3><b><u>Freebies</u> 
+<h2><b><u>Free Downloads!</u> 
 
-<br>(Click on Image to Download)</br></b></h3>
+<br>(Click on Image to Download)</br></b></h2>
   
 <div class="image-grid">
 
