--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"/>
     <custom-font></custom-font>
-    <link rel="icon" href="http://www.skapegoht.com/favicon.ico?v=2" />
-
+    <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_package_v0/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon_package_v0/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon_package_v0/favicon-16x16.png">
