--- a/freebies.html
+++ b/freebies.html
@@ -10,6 +10,7 @@
     <script type="module" src="main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
     <custom-font></custom-font>
+    <theme-color></theme-color>
     <my-favicon></my-favicon>
    </head>
    <body>
