--- a/freebies.html
+++ b/freebies.html
@@ -17,7 +17,7 @@
     <my-header></my-header>
 <main>
 
-<h2><b><u>Free Downloads!</u> 
+<h2 class="freebie-text"><b><u>Free Downloads!</u> 
 
 <br>(Click on Image to Download)</br></b></h2>
   
