--- a/freebies.html
+++ b/freebies.html
@@ -17,9 +17,9 @@
     <my-header></my-header>
 <main>
 
-<h2 id="freebie-text"><b><u>Free Downloads!</u> 
+<!-- <h2 id="freebie-text"><b><u>Free Downloads!</u> 
 
-<br>(Click on Image to Download)</br></b></h2>
+<br>(Click on Image to Download)</br></b></h2> -->
   
 <div class="image-grid">
 
