Added New Preset Pack Link

--- a/freebies.html
+++ b/freebies.html
@@ -23,6 +23,15 @@
   
 <div class="image-grid">
 
+<!-- <h4>Zebralette 3 (Beta) Getting Started Free Preset Pack</h4> -->
+<a href="https://www.dropbox.com/scl/fi/0x8zse00q67t5i77zsucx/SKAPEGOHT-Zebralette-3-Getting-Started-Free-Preset-Pack.zip?rlkey=8crve3ao34hs4wi2rzecybhvs&dl=1" download>
+  <img src="img/Zebralette 3 (Beta) Getting Started Free Preset Pack.jpg" alt="Zebralette 3 (Beta) Getting Started Free Preset Pack">
+  <div class="overlay">
+    <i class="fas fa-download"></i>
+    <span>Download</span>
+  </div>
+</a>
+
 <!-- <h4>Tenshu Getting Started Preset</h4> -->
 <a href="https://www.dropbox.com/scl/fi/ndzuwhmg14z4quqi0088m/Getting-Started-Bass-Tenshu-Style-SKAPEGOHT.vital.zip?rlkey=hf3peg4uw5l39butcewpnusav&dl=1" download>
   <img src="img/TENSHU GETTING STARTED THUMBNAIL.jpg" alt="Image 2">
