--- a/freebies.html
+++ b/freebies.html
@@ -23,6 +23,15 @@
   
 <div class="image-grid">
 
+  <!-- <h4>Overmono IS U Bass Vital Presets</h4> -->
+<a href="https://www.dropbox.com/scl/fi/pshdvu2pdn84wwqzrv2xa/IS-U-OVERMONO-Bass-Recreation-Vital-Presets.zip?rlkey=6ffah7ksla37sf3bc5llkv3ke&st=j4p8djhc&dl=1" download>
+  <img src="img/Overmono IS U Bass Tutorial thumbnail.jpg" alt="Overmono IS U Bass Tutorial">
+  <div class="overlay">
+    <i class="fas fa-download"></i>
+    <span>Download</span>
+  </div>
+</a>
+
 <!-- <h4>Zebralette 3 (Beta) Getting Started Free Preset Pack</h4> -->
 <a href="https://www.dropbox.com/scl/fi/0x8zse00q67t5i77zsucx/SKAPEGOHT-Zebralette-3-Getting-Started-Free-Preset-Pack.zip?rlkey=8crve3ao34hs4wi2rzecybhvs&dl=1" download>
   <img src="img/Zebralette 3 (Beta) Getting Started Free Preset Pack.jpg" alt="Zebralette 3 (Beta) Getting Started Free Preset Pack">
