updated patch added

--- a/freebies.html
+++ b/freebies.html
@@ -23,6 +23,15 @@
   
 <div class="image-grid">
 
+    <!-- <h4>Zebralette 3 Dreamy Bell Synth</h4> -->
+<a href="https://www.dropbox.com/scl/fi/3vbulkjs5bnzayp5wuqft/Dreamy-Bell.h2p.zip?rlkey=uxd4vf9mfdahp547n9ln2a5op&st=6pt9abbs&dl=1" download>
+  <img src="img/Zebralette 3 Dreamy Bell Synth.jpg" alt="Zebralette 3 Dreamy Bell Synth">
+  <div class="overlay">
+    <i class="fas fa-download"></i>
+    <span>Download</span>
+  </div>
+</a>
+
   <!-- <h4>Overmono IS U Bass Vital Presets</h4> -->
 <a href="https://www.dropbox.com/scl/fi/pshdvu2pdn84wwqzrv2xa/IS-U-OVERMONO-Bass-Recreation-Vital-Presets.zip?rlkey=6ffah7ksla37sf3bc5llkv3ke&st=j4p8djhc&dl=1" download>
   <img src="img/Overmono IS U Bass Tutorial thumbnail.jpg" alt="Overmono IS U Bass Tutorial">
