--- a/freebies.html
+++ b/freebies.html
@@ -23,6 +23,15 @@
   
 <div class="image-grid">
 
+      <!-- <h4>Zebralette 3 Synth Pad Tutorial</h4> -->
+<a href="https://www.dropbox.com/scl/fi/i5fy7kq2zpz2yhhj7d1kc/Synth-Pad.h2p.zip?rlkey=gdhr5dl9cwiccewrptbrm9vwr&st=jcryni59&dl=1" download>
+  <img src="img/zebralette 3 pad.00_00_04_59.Still001.jpg" alt="Zebralette 3 Synth Pad Tutorial">
+  <div class="overlay">
+    <i class="fas fa-download"></i>
+    <span>Download</span>
+  </div>
+</a>
+
     <!-- <h4>Zebralette 3 Dreamy Bell Synth</h4> -->
 <a href="https://www.dropbox.com/scl/fi/3vbulkjs5bnzayp5wuqft/Dreamy-Bell.h2p.zip?rlkey=uxd4vf9mfdahp547n9ln2a5op&st=6pt9abbs&dl=1" download>
   <img src="img/Zebralette 3 Dreamy Bell Synth.jpg" alt="Zebralette 3 Dreamy Bell Synth">
