Style Updates and New Patch

--- a/freebies.html
+++ b/freebies.html
@@ -23,6 +23,15 @@
   
 <div class="image-grid">
 
+        <!-- <h4>Zebralette 3 Metallic Pluck Tutorial</h4> -->
+<a href="https://www.dropbox.com/scl/fi/fn52165i81tmo0ix9cm7e/Metallic-Pluck-Tutorial-.h2p.zip?rlkey=0dypfullkomnvzn5973i40q9k&st=7uuocwqv&dl=1" download>
+  <img src="img/metallic pluck.00_00_16_23.Still001.jpg" alt="Zebralette 3 Metallic Pluck Tutorial">
+  <div class="overlay">
+    <i class="fas fa-download"></i>
+    <span>Download</span>
+  </div>
+</a>
+
       <!-- <h4>Zebralette 3 Synth Pad Tutorial</h4> -->
 <a href="https://www.dropbox.com/scl/fi/i5fy7kq2zpz2yhhj7d1kc/Synth-Pad.h2p.zip?rlkey=gdhr5dl9cwiccewrptbrm9vwr&st=jcryni59&dl=1" download>
   <img src="img/zebralette 3 pad.00_00_04_59.Still001.jpg" alt="Zebralette 3 Synth Pad Tutorial">
