--- a/freebies.html
+++ b/freebies.html
@@ -23,6 +23,15 @@
   
 <div class="image-grid">
 
+          <!-- <h4>Zebralette 3 Riser/Downshifter FX</h4> -->
+<a href="https://www.dropbox.com/scl/fi/uttqkjh85t9ccpl0l9r7n/Riser-FX.h2p.zip?rlkey=sk9s7whcazzeozzbdca5kflhf&st=2wtoknq0&dl=1" download>
+  <img src="img/riser fx zebralette 3.00_00_03_35.Still001.jpg" alt="Zebralette 3 Riser/Downshifter FX">
+  <div class="overlay">
+    <i class="fas fa-download"></i>
+    <span>Download</span>
+  </div>
+</a>
+
         <!-- <h4>Zebralette 3 Metallic Pluck Tutorial</h4> -->
 <a href="https://www.dropbox.com/scl/fi/fn52165i81tmo0ix9cm7e/Metallic-Pluck-Tutorial-.h2p.zip?rlkey=0dypfullkomnvzn5973i40q9k&st=7uuocwqv&dl=1" download>
   <img src="img/metallic pluck.00_00_16_23.Still001.jpg" alt="Zebralette 3 Metallic Pluck Tutorial">
