--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       <div class="header-container">
         <div class="header-content">
           <h1 id="header">Welcome to the Community.</h1>
-          <a href="about.html" class="header-button-link" id="button1">About</a>
-          <a href="contact.html" class="header-button-link" id="button2"
-            >Contact</a>
+          <a href="freebies.html" class="header-button-link" id="button1">Freebies</a>
+          <a href="about.html" class="header-button-link" id="button2">About</a>
         </div>
         <a href="#main-content" class="scroll-arrow">&#x2193;</a>
       </div>
@@ -31,10 +30,13 @@
     <section>
       <p id="main-content">
         <center>
+          <b><h2>&#9774;</b></h2><br/>
+        </center>
+       <!-- <center>
           <b><i>Leading with Love</i> &#9774;</b> <br />Hello world! Welcome to
           an inclusive community that embraces <b>all.</b> <br />We can make a
           positive change, and it starts with our music, art, and ambition.
-        </center>
+        </center> -->
       </p>
     </section>
     <my-footer></my-footer>
