--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer-links">
-        <a href="store.html">Store</a>
+        <!-- <a href="store.html">Store</a> -->
         <a href="https://mailchi.mp/c0633f8de561/skapegoht">Sign Up</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
