--- a/about.html
+++ b/about.html
@@ -18,8 +18,21 @@
   <main>
    <center> <section class="about-section">
       <h1>About SKAPEGOHT</h1>
-
-      <p>Since 2009, I have dedicated myself to the art and science of music production, immersing in the ever-evolving world of digital audio workstations and recording technologies. My journey started over a decade ago, and since then, I have acquired extensive knowledge and proficiency in a variety of DAWs, including industry favorites like Ableton, Pro Tools, Cubase, FL Studio, and Logic. This expertise is complemented by my deep understanding of numerous software synthesizers and advanced recording technologies, which has allowed me to craft unique sounds and innovative music.</p>
+      
+      <p>email: skapegoht@gmail.com
+        <br>
+        <br>https://soundcloud.com/@skapegoht
+        <br>
+        <br>https://www.threads.net/@skapegoht
+        <br>
+        <br> https://www.instagram.com/@skapegoht/ 
+        <br>
+        <br>https://www.facebook.com/@SKAPEGOHT/
+        <br>
+        <br> https://tiktok.com/@skapegoht
+      </p>
+     
+    <!-- <p>Since 2009, I have dedicated myself to the art and science of music production, immersing in the ever-evolving world of digital audio workstations and recording technologies. My journey started over a decade ago, and since then, I have acquired extensive knowledge and proficiency in a variety of DAWs, including industry favorites like Ableton, Pro Tools, Cubase, FL Studio, and Logic. This expertise is complemented by my deep understanding of numerous software synthesizers and advanced recording technologies, which has allowed me to craft unique sounds and innovative music.</p>
 
       <p>Beyond creating music, I am passionate about sharing my knowledge and experience with the wider music community. Recognizing the power of digital platforms, I have been actively creating and sharing free tutorials on YouTube and various social media channels. These tutorials cover a wide range of topics, from basic production techniques to advanced tips for using specific DAWs and software instruments. My commitment to education also extends to the development and distribution of sample packs, which are meticulously crafted to inspire and assist fellow music producers in their creative endeavors.</p>
 
